# src/models/user.model.ts
@@ -1,0 +1,37 @@
+import { Model, DataTypes } from "sequelize";
+import sequelize from "../config/database"; // Connexion à la base de données
+
+export interface UserAttributes {
+    id?: number;
+    username: string;
+    password: string;
+}
+
+export class User extends Model<UserAttributes> implements UserAttributes {
+    public id!: number;
+    public username!: string;
+    public password!: string;
+}
+
+User.init(
+    {
+        id: {
+            type: DataTypes.INTEGER,
+            autoIncrement: true,
+            primaryKey: true,
+            allowNull: false,
+        },
+        username: {
+            type: DataTypes.STRING,
+            allowNull: false,
+        },
+        password: {
+            type: DataTypes.STRING,
+            allowNull: false,
+        },
+    },
+    {
+        sequelize,
+        tableName: "User",
+    }
+);
